--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
+    "@types/papaparse": "^5.3.15",
+    "highlight.js": "^11.10.0",
+    "papaparse": "^5.4.1",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
